css/style.css
/* ... */
td { vertical-align: top; }





/* ==|== primary styles =====================================================
   Author:
   ========================================================================== */


@font-face {
  font-family: 'Neuzeit';
  src: url('../fonts/neuzeit-book.svg#svgNeuzeit') format('svg'); 
  src: url('../fonts/neuzeit-book.eot'); /* IE9 Compat Modes */
  src: url('../fonts/neuzeit-book.eot?#iefix') format('embedded-opentype'), 
       url('../fonts/neuzeit-book.woff') format('woff'), 
       url('../fonts/neuzeit-book.ttf')  format('truetype');
}

body {
  /*background: rgb(64,194,182);*/
  font-family: 'Neuzeit', helvetica, sans-serif;
  text-align: center;
/*  background: rgb(90,203,153);*/
}

html,body {
  height: 100%;
}


.reveal-me-holder {height: 100%;} 

.main {
  height: 100%;
}

.casing {
  background: rgb(90,203,153);
  position: relative;
  height: 100%; position:relative; z-index: 2;
/*  margin: auto 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  height: 100%;
  z-index: 60;  */
  padding: 20px 20px 20px 20px;
/*  display: inline-block;*/
  box-sizing: border-box;
  -moz-box-sizing: border-box;
/*  box-shadow: 0px 6px 5px rgba(0,0,0,0.2);*/
-webkit-transform: translate3d(0,0,0);
}

#matrix {
  background: transparent;

    position: absolute;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%,-50%);
    transform: translate(-50%,-50%);
}


.container {
/*  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;*/
/*  overflow: auto;*/
  background: rgb(64,194,182);
  box-sizing: border-box;
  -moz-box-sizing: border-box;
  padding: 40px;
  height: 100%; position:fixed; bottom:0; width:100%; color:white;
  -webkit-transform: translate3d(0,0,0);
}

.wrapper {
  width: 90%;
  max-width: 800px;
  margin: 0 auto;
  text-align: left;
}


.sunny,.rainy {
  display: none;
}

.visible {
  display: inline-block;
}

.metric {
  margin: 2em 0;
}

.metric p {
  margin: 0;
}

.bar {
  height: 30px;
  width: 100%;
  background: rgba(255,255,255,0.3);
  position: relative;
}

.bar-vertical {
  height: 250px;
  width: 30px;
  background: rgba(255,255,255,0.3);
  position: relative;
}


.progress {
  background: rgba(255,255,255,1);
  position: absolute;
  -webkit-transition: all 1500ms cubic-bezier(0.215, 0.610, 0.355, 1.000); 
   -moz-transition: all 1500ms cubic-bezier(0.215, 0.610, 0.355, 1.000); 
     -o-transition: all 1500ms cubic-bezier(0.215, 0.610, 0.355, 1.000); 
        transition: all 1500ms cubic-bezier(0.215, 0.610, 0.355, 1.000); /* easeOutCubic */
}

.bar .progress{
  top: 0;
  bottom: 0;
  left: 0;
  height: 100%;
  width: 0%;
}


.bar-vertical .progress {
  right: 0;
  bottom: 0;
  left: 0;
  height: 0%;
  width: 100%;
}


.stress-o-meter {
  height:150px;
  width:300px;
  border-radius: 300px 300px 0 0;
  background:rgba(255,255,255,0.3);
  position: relative;
  overflow: hidden;
}

.pointer {
  height: 130px;
  width: 4px;
  background: rgba(255,255,255,1);
  position: absolute;
  bottom: -5px  ;
  left: 149px;
  -webkit-transition: all 1500ms cubic-bezier(0.680, 0, 0.265, 1); /* older webkit */
  -webkit-transition: all 1500ms cubic-bezier(0.680, -0.550, 0.265, 1.550); 
     -moz-transition: all 1500ms cubic-bezier(0.680, -0.550, 0.265, 1.550); 
       -o-transition: all 1500ms cubic-bezier(0.680, -0.550, 0.265, 1.550); 
          transition: all 1500ms cubic-bezier(0.680, -0.550, 0.265, 1.550); /* easeInOutBack */
  -webkit-transform: translate(-50%) rotate(0deg);
  -webkit-transform-origin: bottom center;
  -moz-transform: translate(-50%) rotate(0deg);
  -moz-transform-origin: bottom center;
  transform: translate(-50%) rotate(0deg);
  transform-origin: bottom center;
}

.pointer:after {
  content: '';
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 0 10px 10px 10px;
  border-color: transparent transparent rgba(255,255,255,1) transparent;
  position: absolute;
  top: -10px;
  left: -8px;
}

.stress-o-meter:hover .pointer {
    -webkit-transform: translate(-50%) rotate(-65deg);
}





/* ==|== media queries ======================================================

   ========================================================================== */
   






/* ==|== non-semantic helper classes ========================================
   Please define your styles before this section.
   ========================================================================== */

/* For image replacement */
.ir { display: block; border: 0; text-indent: -999em; overflow: hidden; background-color: transparent; background-repeat: no-repeat; text-align: left; direction: ltr; *line-height: 0; }
.ir br { display: none; }

/* Hide from both screenreaders and browsers: h5bp.com/u */
.hidden { display: none !important; visibility: hidden; }

/* Hide only visually, but have it available for screenreaders: h5bp.com/v */
.visuallyhidden { border: 0; clip: rect(0 0 0 0); height: 1px; margin: -1px; overflow: hidden; padding: 0; position: absolute; width: 1px; }

/* Extends the .visuallyhidden class to allow the element to be focusable when navigated to via the keyboard: h5bp.com/p */
.visuallyhidden.focusable:active, .visuallyhidden.focusable:focus { clip: auto; height: auto; margin: 0; overflow: visible; position: static; width: auto; }

/* Hide visually and from screenreaders, but maintain layout */
.invisible { visibility: hidden; }

/* Contain floats: h5bp.com/q */
.clearfix:before, .clearfix:after { content: ""; display: table; }
.clearfix:after { clear: both; }
.clearfix { *zoom: 1; }
/* ... */

